--- a/Day44/index.html
+++ b/Day44/index.html
@@ -6,6 +6,12 @@
     <title>Jeong-yun Lee</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="toad_favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Italianno&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -13,11 +19,60 @@
       <!-- Contents Division Element -->
       <img class="top_cloud" src="images/cloud.png" alt="cloud_img" />
       <h1>I'm Jeong-yun.</h1>
-      <p>a programmer</p>
+      <h2>a programmer</h2>
       <img class="bottom_cloud" src="images/cloud.png" alt="cloud_img" />
       <img src="images/mountain.png" alt="mountain_img" />
     </div>
-    <div class="middle_container"></div>
-    <div class="bottom_container"></div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="" alt="profile image" />
+        <h2>Hello.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
+          Non auctor, montes nulla distinctio.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="web-image" src="./images/web.png" alt="web skill" />
+          <h3>Lorem & Ipsum</h3>
+          <p>
+            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
+            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
+            nam, lectus ante, ut lorem eros.
+          </p>
+        </div>
+        <div class="skill-row">
+          <img class="server-image" src="./images/server.png" alt="server skill" />
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
+            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
+            eu, rutrum nam.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+          tellus donec dui, ornare erat.
+        </p>
+        <a class="btn" href="mailto:jy020605@seoultech.ac.kr">CONTACT ME</a>
+      </div>
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://github.com/itisyijy">GitHub</a>
+      <a class="footer-link" href="https://velog.io/@itisyijy">Velog</a>
+      <a class="footer-link" href="https://www.instagram.com/grey_cona"
+        >greycona</a
+      >
+      <p class="copyright">© 2025 Jeong-yun Lee.</p>
+    </div>
   </body>
 </html>
